# Capston_project_ML_Tata_Steel_Machine_Failure_Prediction

./: Capston_project_ML_Tata_Steel_Machine_Failure_Prediction.ipynb  README.md  inference.py  main.py  pyproject.toml  requirements.txt
App/artifacts/: cat_encoder.joblib  final_features.txt
App/src/: data_loading.py  main.py  preprocessing.py  requirments.txt  train.py
data/processed/: X_test.csv  X_train.csv  y_test.csv  y_train.csv
models/saved_models/: lgbm_base_model.pkl  lgbm_tuned_model.pkl
src/: __init__.py  config.py  logger.py  preprocessing.py  test.py  train.py  utils.py
