[project]
name = "capston-project-ml-tata-steel-machine-failure-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.3.2",
    "lightgbm>=4.1.0",
    "matplotlib>=3.8.2",
    "numpy>=1.26.4",
    "pandas>=2.2.0",
    "plotly>=5.18.0",
    "python-dateutil>=2.8.2",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.1",
    "streamlit>=1.31.0",
]
